Finished History Page Basic Functionality

--- a/pages/history/index.html
+++ b/pages/history/index.html
@@ -6,15 +6,13 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
+<button id="clearhist">Clear History</button>
 <h1 id="header">History</h1>
 <div id="line-under-header"></div>
 
-<div class="history-item">
-    <h3>Discord</h3>
-    <h5>https://www.discord.com/app</h5>
-    <button>Delete</button>
+<div id="histories">
+
 </div>
-<div class="history-item"></div>
 
 <script src="renderer.js"></script>
 </body>
