--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -7,7 +7,7 @@
     <title>New Tab</title>
 </head>
 <body>
-
+<div id="backgroundimage"></div>
 <div class="locationbox" id="locationbox">
     <i id="searchicon" class="fa fa-search"></i>
     <input spellcheck="false" class="searchtext" id="searchfield" type="text" placeholder="Search Google or type a URL">
