Organizing Code Structure

--- a/menu/index.html
+++ b/menu/index.html
@@ -17,7 +17,7 @@
     <div class="option-inactive"><h6></h6></div>
     <div class="option" id="history"><h6>History</h6></div>
     <div class="option-inactive"><h6></h6></div>
-    <div class="option" id="about"><h6>About webby</h6></div>
+    <div class="option" id="about"><h6>About Zinc</h6></div>
     <div class="option" id="quitBtn"><h6>Quit</h6></div>
     <div class="option-inactive"><h6></h6></div>
 </div>
