--- a/index/index.html
+++ b/index/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>webby</title>
+    <title>Zinc</title>
 </head>
 
 <body>
