optimizations and fixes

--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="script-src 'self'">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Zinc</title>
 </head>
@@ -32,7 +32,7 @@
     </div>
 
     <script src="renderer.js"></script>
-    <script src="https://rawgit.com/bevacqua/dragula/master/dist/dragula.min.js"></script>
+    <!-- <script src="https://rawgit.com/bevacqua/dragula/master/dist/dragula.min.js"></script> -->
 </body>
 
 </html>
