--- a/menu/index.html
+++ b/menu/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="script-src 'self'">
     <title>Menu</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
