--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="script-src 'self'">
     <title>History</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
