Performance improve on newtab V2

--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -13,7 +13,7 @@
     <input spellcheck="false" class="searchtext" id="searchfield" type="text" placeholder="Search Google or type a URL">
 </div>
 
-<script async type="text/javascript" src="renderer.js"></script>
+<script defer type="text/javascript" src="renderer.js"></script>
 <script type="text/javascript" src="url.js"></script>
 </body>
 </html>
