Changed the title of Base page

--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <title>History</title>
+    <title>Base</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
