--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -12,7 +12,9 @@
 <div id="background">
     <img src="../../artwork//Zinc.png" id="icon">
 </div>
+<h1 id="appname">Zinc</h1>
+<h2 id="madeby">Made by Zinc DevTeam in Hong Kong <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/flag-for-hong-kong_1f1ed-1f1f0.png"></h2>
 
-<script async src="renderer.js"></script>
+<script src="renderer.js"></script>
 </body>
 </html>
