Added newtab option to menu

--- a/menu/index.html
+++ b/menu/index.html
@@ -15,6 +15,7 @@
     <div class="option" id="home"><h6>Home</h6></div>
     <div class="option" id="reload"><h6>Reload</h6></div>
     <div class="option-inactive"><h6></h6></div>
+    <div class="option" id="newtab"><h6>New Tab</h6></div>
     <div class="option" id="history"><h6>History</h6></div>
     <div class="option-inactive"><h6></h6></div>
     <div class="option" id="about"><h6>About Zinc</h6></div>
