--- a/menu/index.html
+++ b/menu/index.html
@@ -15,8 +15,11 @@
     <div class="option" id="home"><h6>Home</h6></div>
     <div class="option" id="reload"><h6>Reload</h6></div>
     <div class="option-inactive"><h6></h6></div>
-    <div class="option" id="newtab"><h6>New Tab</h6></div>
+    <div class="option" id="apps"><h6>Apps</h6></div>
     <div class="option" id="history"><h6>History</h6></div>
+    <div class="option" id="bookmarks"><h6>Bookmarks</h6></div>
+    <div class="option" id="downloads"><h6>Downloads</h6></div>
+    <div class="option" id="addon"><h6>Addon</h6></div>
     <div class="option-inactive"><h6></h6></div>
     <div class="option" id="about"><h6>About Zinc</h6></div>
     <div class="option" id="quitBtn"><h6>Quit</h6></div>
