Async import renderer process

--- a/index/index.html
+++ b/index/index.html
@@ -31,8 +31,7 @@
 
     </div>
 
-    <script src="renderer.js"></script>
-    <!-- <script src="https://rawgit.com/bevacqua/dragula/master/dist/dragula.min.js"></script> -->
+    <script async src="renderer.js"></script>
 </body>
 
 </html>
