Changed title to Apps

--- a/pages/apps/index.html
+++ b/pages/apps/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <title>Base</title>
+    <title>Apps</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 id="header">Base</h1>
+<h1 id="header">Apps</h1>
 <div id="line-under-header"></div>
 
 <script src="renderer.js"></script>
